# QsChat

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
database/: __init__.py  crud.py  db.py  models.py
routers/: __init__.py  user.py
src/: Api.py  WebApi.py
tests/: test_database.py
tests/database/: test_session.py  test_user_crud.py
utils/: exception.py  models.py
