[project]
name = "QsChat"
version = "0.0.0"
description = ""
authors = [{ name = "Qs315490", email = "315490@qq.com" }]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["robyn", "sqlmodel"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "-vs --color=yes"
testpaths = "tests"
markers = ["user"]
