[project]
name = "QsChat"
version = "0.1.0"
description = ""
authors = [{ name = "Qs315490", email = "315490@qq.com" }]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["robyn>=0.65.0", "sqlmodel>=0.0.24"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.5"]

[tool.pytest.ini_options]
addopts = "-vs --color=yes"
testpaths = "tests"
markers = ["user", "session"]

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[tool.ruff]
select = [ # 选择的规则
    "F",    # pyflakes, 提供了一些比较基础的问题检查。
    "E",    # pycodestyle errors, PEP8 检查。
    "W",    # pycodestyle warnings, PEP8 检查。
    "UP",   # pyupgrade, 提示新版本的 Python 语法。
    "I",    # isort, 对 import 语句进行排序。
    "N",    # pep8-naming, PEP8 命名规范检查。
    "PL",   # Pylint
    "PERF", # pyperf, 检测一些性能问题。
    "RUF",  # Ruff 社区自己实现的一些规则。
]
ignore = [
    "F403",    # undefined-local-with-import-star
    "PLR2004", # pylint: magic-value-comparison
    "N818",    # error-suffix-on-exception-name
]
